# AIreport-pipeline

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: daily_report.yml  finance_report.yml
src/ai_pipeline/: __main__.py  config.py  models.py  pipeline.py
src/ai_pipeline/fetcher/: __init__.py  arxiv.py  huggingface.py  rss.py  websearch.py
src/ai_pipeline/filter/: coarse.py  llm_filter.py
src/ai_pipeline/generator/: report.py
src/ai_pipeline/sender/: slack.py
src/finance_pipeline/: __main__.py  config.py  models.py  pipeline.py
src/finance_pipeline/analyzer/: report.py
src/finance_pipeline/fetcher/: crypto.py  news.py  stocks.py
tests/: test_fetcher.py  test_filter.py  test_generator.py
